# obscure_stats

./: .gitignore  CITATION  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.txt  CONTRIBUTING.md  LICENSE  LICENSE.txt  LICENSES_bundled  LICENSES_bundled.txt  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: bandit.yml  cflite_pr.yml  codeql.yml  dependency-review.yml  package.yml  publish.yml  scorecard.yml  scorecards.yml  security.yml  stale.yml
obscure_stats/association/: __init__.py  association.py
obscure_stats/associations/: __init__.py  associations.py
obscure_stats/central_tendencies/: __init__.py  central_tendencies.py
obscure_stats/central_tendency/: __init__.py  central_tendency.py
obscure_stats/dispersion/: __init__.py  dispersion.py
obscure_stats/experimental/: __init__.py  experimental.py
obscure_stats/kurtosis/: kurtosis.py
obscure_stats/skewness/: __init__.py  skewness.py
obscure_stats/variation/: __init__.py  variation.py
src/obscure_stats/: __init__.py
src/obscure_stats/association/: __init__.py  association.py
src/obscure_stats/central_tendency/: __init__.py  central_tendency.py
src/obscure_stats/dispersion/: __init__.py  dispersion.py
src/obscure_stats/kurtosis/: __init__.py  kurtosis.py
src/obscure_stats/skewness/: __init__.py  skewness.py
src/obscure_stats/variation/: __init__.py  variation.py
tests/: conftest.py  test_association.py  test_central_tendency.py  test_dispersion.py  test_kurtosis.py  test_skewness.py  test_variation.py
